--- a/templates/milestone_delete.html
+++ b/templates/milestone_delete.html
@@ -9,6 +9,11 @@
     <title>Delete Milestone ${milestone.name}</title>
     <link rel="stylesheet" type="text/css"
           href="${chrome.htdocs_location}css/roadmap.css" />
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#retarget").click(function(){ $("#target").enable(this.checked) });
+      });
+    </script>
   </head>
 
   <body>
@@ -21,8 +26,7 @@
     <form id="edit" action="" method="post">
       <input type="hidden" name="action" value="delete" />
       <p><strong>Are you sure you want to delete this milestone?</strong></p>
-      <input type="checkbox" id="retarget" name="retarget" checked="checked"
-             onclick="enableControl('target', this.checked)"/>
+      <input type="checkbox" id="retarget" name="retarget" checked="checked" />
       <label for="target">Retarget associated tickets to milestone</label>
       <select name="target" id="target">
         <option value="">None</option>
