--- a/templates/wiki_view.html
+++ b/templates/wiki_view.html
@@ -10,7 +10,7 @@
     <title>$title</title>
     <script type="text/javascript">
       $(document).ready(function() {
-        $("#content").find("h1,h2,h3,h4,h5,h6").addAnchors("Link to this section");
+        $("#content").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
       });
     </script>
   </head>
