Remove an unused variable, left-over from the Clearsilver template. Spotted by tdkim in #3993, thanks!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4011 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -52,8 +52,8 @@
                      td_attrs = fullrow and {'class': 'fullrow', 'colspan': 100} or {}"
             class="${row.__color__ and 'color'+row.__color__+'-' or ''}${row.__idx__ % 2 and 'odd' or 'even'}"
             style="${row.__bgcolor__ and 'background: '+row.__bgcolor__+';'
-            }${row.__fgcolor__ and row_style+'color: '+row.__fgcolor__+';'
-            }${row.__style__ and row_style+row.__style__+';'
+            }${row.__fgcolor__ and 'color: '+row.__fgcolor__+';'
+            }${row.__style__ and row.__style__+';'
             }${fullrow and ';border: none; padding: 0;' or ''}">
 
             <py:for each="cell in cell_group">
