Correctly display <del>/<ins> fragments containing space. Fixes #3966.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4019 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -116,7 +116,7 @@
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
 }
-.diff table td del, .diff table td ins { text-decoration: none }
+.diff table td del, .diff table td ins { text-decoration: none; white-space: pre; }
 .diff table td del { color: #600 }
 .diff table td ins { color: #060 }
 
