--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -438,7 +438,10 @@ table.listing tbody tr:hover { background: #eed !important }
 .suggestions li.selected { background: #b9b9b9 }
 
 /* Styles for the settings page */
-#content.settings .field th { text-align: right; white-space: nowrap; }
+#content.settings div.field { margin-bottom: 1em; }
+#content.settings tr.field th { text-align: right; vertical-align: top;
+  white-space: nowrap;
+}
 
 /* Styles for the error page (and rst errors) */
 #content.error .message, div.system-message {
