--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -37,8 +37,7 @@
           <th py:for="header in header_group" py:if="not header.hidden" py:with="fullrow = header is header_group[-1]"
             colspan="${fullrow and '100' or None}">
             <a py:strip="not sorting_enabled"
-              href="${href.report(report.id, sort=header.col, asc=not header.asc and '1' or '0')}">
-              <!-- TODO: handle dynamic report variables (formerly report.var) -->
+              href="${href.report(report.id, sort=header.col, asc=not header.asc and '1' or '0', **report.args)}">
               $header.title
             </a>
           </th>
