datetime fixes for the TracQuery module, plus fixed a typo in query.html.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4045 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/query.html
+++ b/templates/query.html
@@ -117,7 +117,7 @@
                     <option py:for="field_name, field in fields.iteritems()"
                             value="$field_name"
                             disabled="${(field.type == 'radio' and
-                                         constraints[fieldname] and
+                                         constraints[field_name] and
                                          len(constraints[field_name])) or None}">
                       ${field.label}
                     </option>
