--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -37,7 +37,8 @@
           <th py:for="header in header_group" py:if="not header.hidden" py:with="fullrow = header is header_group[-1]"
             colspan="${fullrow and '100' or None}">
             <a py:strip="not sorting_enabled"
-              href="${href.report(report.id, sort=header.col, asc=not header.asc and '1' or '0', **report.args)}">
+               py:with="args = dict([(k,v) for k,v in report.args.items() if k not in ('sort', 'asc')])"
+              href="${href.report(report.id, sort=header.col, asc=not header.asc and '1' or '0', **args)}">
               $header.title
             </a>
           </th>
