Added support in `source:` TracLinks for specifying ranges of lines to be highlighted. Original patch by Tim Hatch. Closes #2764.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4075 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -57,7 +57,12 @@ table.code tbody td {
  padding: 1px 2px;
  vertical-align: top;
 }
-
+table.code tbody tr.hilite th {
+ background: #ccf;
+}
+table.code tbody tr.hilite td {
+ background: #ddf;
+}
 .image-file { background: #eee; padding: .3em }
 .image-file img { background: url(../imggrid.png) }
 
