Backported the Ticket module unification from the Workflow branch, in order to ease future merges from trunk to WorkFlow
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4096 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -31,8 +31,7 @@
       <h1>Ticket #${ticket.id}
         <span class="status">(${ticket.status}<py:if
             test="ticket.type"> ${ticket.type}</py:if><py:if
-            test="ticket.resolution">: ${ticket.resolution}</py:if>
-          )</span>
+            test="ticket.resolution">: ${ticket.resolution}</py:if>)</span>
       </h1>
 
       <div id="ticket">
