No need for the plugins about page now that WebAdmin (with its Plugins panel) is in the core.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4098 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/about.css
+++ b/htdocs/css/about.css
@@ -18,25 +18,7 @@
 }
 #content.about_config td.name { background:#f9f9f0; }
 #content.about_config td.value { background:#f9f9f0; font-weight: bold; }
-#content.about_config td.defaultvalue { font-family: monospace; background:#f9f9f0; }
+#content.about_config td.defaultvalue { font-family: monospace;
+  background: #f9f9f0;
+}
 #content.about_config td.doc { padding: 3px 1em 3px 1em; }
-
-/* About plugins */
-#content.about_plugins h2 {
- background: #f7f7f7;
- border-bottom: 1px solid #d7d7d7;
- margin: 2em 0 0;
-}
-#content.about_plugins table {
- border-collapse: collapse;
- margin: 1em 0;
- table-layout: fixed;
- width: 100%;
-}
-#content.about_plugins th, #content.about_plugins td { border: 1px solid #ddd; padding: 3px }
-#content.about_plugins th { background: #f7f7f0; font-weight: bold; text-align: right; vertical-align: top; width: 12em }
-#content.about_plugins td.module { font-family: monospace; }
-#content.about_plugins td.module .path { color: #999; font-size: 90%; }
-
-#content.about_plugins td.xtnpts { margin-top: 1em; }
-#content.about_plugins td.xtnpts ul { list-style: square; margin: 0; padding: 0 0 0 2em; }
